samplenodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sample-nodeapp
    namespace: observability
    labels:
        app: sample-nodeapp
    annotations:
        kubernetes.io/ingress.class: "alb"
        # external-dns.alpha.kubernetes.io/hostname: ""
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/group.name: "dev-external"
        # Health Check Settings
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-port: traffic-port
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/success-codes: "200"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
        alb.ingress.kubernetes.io/target-type: ip
        
        ## SSL Settings
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
        alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:368471451480:certificate/59620db3-ec75-4f73-9f47-d02f99deeb0b
        alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
    rules:
        - host: samplea.farmtoplateapps.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sample-nodeapp
                            port:
                                number: 7777
        
        - host: sampleb.farmtoplateapps.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sample-nodeapp
                            port:
                                number: 5555
